# app/api/routers/demo_router.py
@@ -1,0 +1,6 @@
+from fastapi import APIRouter
+
+from app.api.controllers.demo_controller import router as ep
+
+router = APIRouter(prefix="/demo", tags=["demo"])
+router.include_router(ep)
